objects/AcctSeedERP__Purchase_Order_Line__c/fields/AcctSeedERP__GL_Account_Variable_1__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__GL_Account_Variable_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Traditional Sub-General Ledger account segment used to report on divisions, departments, geographies, cost centers, profit centers or business units.</inlineHelpText>
    <label>GL Account Variable 1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>GL Account Variable 1</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
    <relationshipLabel>Purchase Order Lines</relationshipLabel>
    <relationshipName>Purchase_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>