objects/AcctSeedERP__Purchase_Order_Line__c/fields/AcctSeedERP__Project_Task__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Project_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Task</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctSeed__Project_Task__c.AcctSeed__Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.AcctSeedERP__Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__Project_Task__c</referenceTo>
    <relationshipLabel>Purchase Order Lines</relationshipLabel>
    <relationshipName>Purchase_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>