objects/AcctSeedERP__Purchase_Order_Line__c/fields/AcctSeedERP__Quantity_Unreceived__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Quantity_Unreceived__c</fullName>
    <formula>IF(AcctSeedERP__Quantity__c-AcctSeedERP__Quantity_Received__c &gt;= 0, AcctSeedERP__Quantity__c-AcctSeedERP__Quantity_Received__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Unreceived</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>