objects/AcctSeedERP__Purchase_Order_Line__c/fields/AcctSeedERP__Total__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Total__c</fullName>
    <formula>AcctSeedERP__Quantity__c *AcctSeedERP__Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>