objects/AcctSeedERP__Purchase_Order_Line__c/fields/Clearing_Cost_Including_Custom_Duty__c.field-meta.xml
<CustomField>
    <fullName>Clearing_Cost_Including_Custom_Duty__c</fullName>
    <label>Clearing Cost Including Custom Duty</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>