objects/AcctSeedERP__Purchase_Order_Line__c/fields/Custom_Clearing_Agent__c.field-meta.xml
<CustomField>
    <fullName>Custom_Clearing_Agent__c</fullName>
    <label>Custom Clearing Agent</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>