objects/AcctSeedERP__Purchase_Order_Line__c/fields/Custom_Duty_Charges__c.field-meta.xml
<CustomField>
    <fullName>Custom_Duty_Charges__c</fullName>
    <label>Custom Duty Charges</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>