objects/AcctSeedERP__Purchase_Order_Line__c/fields/Landed_Cost_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Landed_Cost_Per_Unit__c</fullName>
    <formula>Total_Landed_Cost__c / AcctSeedERP__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Landed Cost Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>