objects/AcctSeedERP__Purchase_Order_Line__c/fields/Local_Transportation__c.field-meta.xml
<CustomField>
    <fullName>Local_Transportation__c</fullName>
    <label>Local Transportation</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>