objects/AcctSeedERP__Purchase_Order_Line__c/fields/Other_Charges_1__c.field-meta.xml
<CustomField>
    <fullName>Other_Charges_1__c</fullName>
    <label>Other Charges 1</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>