objects/AcctSeedERP__Purchase_Order_Line__c/fields/Total_Custom_Clearing_Agent__c.field-meta.xml
<CustomField>
    <fullName>Total_Custom_Clearing_Agent__c</fullName>
    <formula>AcctSeedERP__Quantity__c  *  Custom_Clearing_Agent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Custom Clearing Agent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>