objects/AcctSeedERP__Purchase_Order_Line__c/fields/Total_Freight__c.field-meta.xml
<CustomField>
    <fullName>Total_Freight__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Freight(InActive)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>