objects/AcctSeedERP__Purchase_Order_Line__c/fields/Total_Landed_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Landed_Cost__c</fullName>
    <formula>Total_Purchase_Price_1__c + Total_Freight_1__c + Custom_Clearing_Agent__c + Custom_Duty_Charges__c + Local_Transportation__c + Other_Charges_1__c + Other_Charges_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Landed Cost</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>