objects/AcctSeedERP__Purchase_Order_Line__c/fields/Total_Purchase_Price_1__c.field-meta.xml
<CustomField>
    <fullName>Total_Purchase_Price_1__c</fullName>
    <label>Total Purchase Price</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>