objects/AcctSeedERP__Purchase_Order_Line__c/fields/Total_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Purchase_Price__c</fullName>
    <formula>Purchase_Price__c * AcctSeedERP__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Purchase Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>