objects/AcctSeedERP__Purchase_Order_Line__c/validationRules/AcctSeedERP__Prevent_Over_Receive.validationRule-meta.xml
<ValidationRule>
    <fullName>AcctSeedERP__Prevent_Over_Receive</fullName>
    <active>true</active>
    <description>Prevent over receive Purchase Order</description>
    <errorConditionFormula>AcctSeedERP__Quantity__c &lt; AcctSeedERP__Quantity_Received__c</errorConditionFormula>
    <errorDisplayField>AcctSeedERP__Purchase_Order__c</errorDisplayField>
    <errorMessage>You cannot over-receive a Purchase Order.</errorMessage>
</ValidationRule>