objects/AcctSeedERP__Purchase_Order_Line__c/validationRules/AcctSeedERP__Quantity_Is_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>AcctSeedERP__Quantity_Is_Positive</fullName>
    <active>true</active>
    <description>Quantity must be greater than or equal to 0</description>
    <errorConditionFormula>AcctSeedERP__Quantity__c &lt; 0</errorConditionFormula>
    <errorDisplayField>AcctSeedERP__Quantity__c</errorDisplayField>
    <errorMessage>Purchase Order Line: The Quantity must be greater than or equal to 0.</errorMessage>
</ValidationRule>